# semantics

./: Cargo.toml  README.md
semantics/: Cargo.toml
semantics-derive/: Cargo.toml
semantics-derive/src/: lib.rs
semantics/src/: lib.rs
semantics/tests/: derive.rs
